# BJJ-Analyzer-Rust

./: .env.example  .gitignore  .gitignore.m  CLAUDE.md  Cargo.docker.toml  Cargo.full.toml  Cargo.toml  Cargo.toml.original  DEPLOYMENT.md  LLM_IMPLEMENTATION.md  NEXT_SESSION_PLAN.md  README.md  REMOTE_GPU_SETUP.md  REMOTE_GPU_WHISPER_PLAN.md  STRUCTURED_LLM_OPTIMIZATION.md  TODO.md  WINDOWS-SETUP.md  build-docker-windows.bat  build-docker.sh  compile_test.rs  corrections.json  deploy-and-test.sh  deploy-local.sh  docker-compose.simple.yml  docker-compose.yml  test-docker.sh  test-llm-correction.rs
.claude/: settings.local.json
RolOutput/: processing_results.json
RolOutput/audio/: MikeyMusumeciVol1.srt  MikeyMusumeciVol1.txt  SystematicallyAttackingtheGuardTwoByGordonRyan1.srt  SystematicallyAttackingtheGuardTwoByGordonRyan1.txt
benches/: transcription_bench.rs  video_processing.rs
config/: bjj_terms.txt  remote-gpu-example.toml
config/prompts/: README.md  correction.txt  filename_parsing.txt  mermaid_flowchart.txt  summary_high_level.txt  summary_technical.txt  whisper_transcription.txt
curation-manager/: Cargo.toml
curation-manager/src/: lib.rs
examples/: python_integration.py
output_test4/: processing_results.json
output_test5/: processing_results.json
output_test5/audio/: ModernReverseDeLaRivabyJasonRua3.srt  ModernReverseDeLaRivabyJasonRua3.txt
remote-whisper-server/: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  requirements.txt
shared/bjj-config/: Cargo.toml
shared/bjj-config/src/: lib.rs
shared/bjj-core/: Cargo.toml
shared/bjj-core/examples/: integration_test.rs
shared/bjj-core/src/: artifacts.rs  lib.rs  metadata.rs  video_file.rs
shared/bjj-core/tests/: integration_tests.rs
shared/bjj-llm/: Cargo.toml
shared/bjj-llm/src/: config.rs  correction.rs  filename_parsing.rs  lib.rs  providers.rs
shared/bjj-llm/tests/: integration_tests.rs
shared/bjj-transcription/: Cargo.toml
shared/bjj-transcription/src/: audio.rs  config.rs  lib.rs  transcription.rs
shared/bjj-transcription/tests/: integration_tests.rs
src/: api.rs  audio.rs  config.rs  lib.rs  main.rs  processing.rs  python_bridge.rs  state.rs  video.rs
src/api/: handlers.rs  mod.rs  models.rs  server.rs
src/bjj/: dictionary.rs  mod.rs
src/chapters/: cache.rs  detector.rs  mod.rs  product_pages.rs  scraper.rs
src/llm/: correction.rs  filename_parsing.rs  mod.rs  providers.rs
src/transcription/: mod.rs  srt.rs  whisper.rs
tools/chapter-finder/: README.md  bjj_fanatics_finder.py  requirements.txt
transcription-worker/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.gpu  Dockerfile.simple  Dockerfile.windows
transcription-worker/src/: lib.rs  main.rs
transcription-worker/tests/: integration_tests.rs
ui/: README.md  index.html  package.json  test-integration.html  test-series-edit.html  test-ui.html  verify-series-edit.html
ui/css/: components.css  styles.css
ui/js/: api.js  app.js  config.js  websocket.js
ui/js/components/: corrections.js  series-manager.js  status-monitor.js  video-list.js
