[package]
name = "bjj-core"
version = "0.1.0"
edition = "2021"
authors = ["TigreRoll"]
description = "Core BJJ video processing data structures and utilities"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
walkdir = { workspace = true }
md5 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }