[package]
name = "bjj-llm"
version = "0.1.0"
edition = "2021"
authors = ["TigreRoll"]
description = "BJJ LLM integrations and content generation"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }